[gd_scene load_steps=4 format=2]

[ext_resource path="res://Global/Bullet/Shotgun_bullet/ShotgunBlast/ShotgunBlast.gd" type="Script" id=1]
[ext_resource path="res://Global/Bullet/Shotgun_bullet/ShotgunBullet.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.97478, 2.16778 )

[node name="ShotgunBlast" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Top" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -5 )

[node name="MiddleTop" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -2.5 )

[node name="Middle" parent="." instance=ExtResource( 2 )]

[node name="MiddleBottom" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 2.5 )

[node name="Bottom" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 5 )

[node name="KillTimer" type="Timer" parent="."]

[connection signal="timeout" from="KillTimer" to="." method="_on_Timer_timeout"]
